# daktilo

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
config/: daktilo.toml
crates/daktilo_common/: Cargo.toml
crates/daktilo_common/src/: event.rs  lib.rs
crates/daktilo_lib/: Cargo.toml
crates/daktilo_lib/src/: app.rs  config.rs  event.rs  lib.rs
crates/daktilo_server/: Cargo.toml  build.rs
crates/daktilo_server/proto/: daktilo.proto
crates/daktilo_server/src/: lib.rs  server.rs
plugins/daktilo_nvim/: Cargo.toml  build.rs
plugins/daktilo_nvim/src/: config.rs  lib.rs
src/: api.rs  app.rs  config.rs  lib.rs
