[package]
name = "daktilo_lib"
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
daktilo_common = { path = "../daktilo_common" }
daktilo_server = { path = "../daktilo_server", features = ["server"], optional = true }

rodio = { version = "0.17.3", default-features = false, features = [
  "symphonia-mp3",
] }
rust-embed = { version = "8.0.0", features = ["debug-embed", "compression"] }
toml = "0.8.6"
fastrand = "2.0.1"
dirs = "5.0.1"
regex = "1.10.2"
serde_regex = "1.1.0"
rdev.workspace = true
tokio.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[features]
default = ["server"]
server = ["dep:daktilo_server"]
