[package]
name = "daktilo_nvim"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
nvim-oxi = { version = "0.3.0", features = ["libuv", "neovim-0-9"] }
prost = "0.12.1"
serde = { version = "1.0.189", features = ["derive"] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.10.2"

[workspace]

[build-dependencies]
tonic-build = { version = "0.10.2", features = ["prost"] }
